5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1835_2222.log
== TEST (2019-07-02 14:07:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i=j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i = c - i and j = d -j ):
			e=a[i,j] + e
		print(b)
		print(e)
-- ERROR:
File "XXXX", line 8
    if(i=j):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:08:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i = c - i and j = d -j ):
			e=a[i,j] + e
		print(b)
		print(e)
-- ERROR:
File "XXXX", line 12
    if (i = c - i and j = d -j ):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:08:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == c - i and j == d -j ):
			e=a[i,j] + e
		print(b)
		print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:09:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == c - i and j == d -j ):
			e=a[i,j] + e
print(b)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:12:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == c - i and j == d - j ):
			e=a[i,j] + e
print(b)
print(e)
-- EXECUTION TIME:
1.06201
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1835/2222/main.py", line 6, in <module>
    for i in range(shape(a)[0]):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:18:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == c - i and j == d - j ):
			e=a[i,j] - e
print(b)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:20:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == c - i and j == j ):
			e=a[i,j] + e
print(b)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:20:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] - b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == c - i and j == j ):
			e=a[i,j] + e
print(b)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:21:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i ==  i and j == d - j ):
			e=a[i,j] + e
print(b)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:07:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i ==  i and j == d - i ):
			e=a[i,j] + e
print(b)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:09:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i ==  i and j == d - i ):
			e=a[i,j] + e
print(b-e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:09:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i ==  i and j == d - i ):
			e=a[i,j] + e
print(b-e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:09:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i ==  i and j == d - i ):
			e=a[i,j] + e
print(b-e)

-- EXECUTION TIME:
1.13809
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1835/2222/main.py", line 6, in <module>
    for i in range(shape(a)[0]):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:10:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i ==  i and j == d - i ):
			e=a[i,j] + e
print(b-e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:12:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == i and j == d - i ):
			e = a[i,j] + e
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:13:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == i and j == d - i ):
			e = a[i,j] + e
print(b)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:14:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == i and j == d - i ):
			e = a[i,j] + e
print(b-e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:14:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array(eval(input("digite: ")))
b=0
e=0
for i in range(shape(a)[0]):
	for j in range(shape(a)[1]):
		if(i==j):
			b = a[i,j] + b
		c = shape(a)[0] - 1
		d = shape(a)[1] - 1
		if (i == i and j == d - i ):
			e = a[i,j] + e
print(b-e)

-- EXECUTION TIME:
1.10531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1835/2222/main.py", line 6, in <module>
    for i in range(shape(a)[0]):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
